[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Yoann Blein <yoann.blein@free.fr>", "Hugo Guiroux <gx.hugo@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
bson = "0.14.1"


[dev-dependencies]
hexf-parse = "0.1.0"
